--- a/OneDrive/CIS2336/.gitignore
+++ b/OneDrive/CIS2336/.gitignore
@@ -1,14 +1,37 @@
 # Ignore system files and directories
-AppData/
-*.log
-*.tmp
-*.bak
-
-# Ignore OneDrive metadata files (optional, if you see these)
-._*
-
-# Ignore node_modules folder (if applicable, e.g., in JavaScript projects)
-node_modules/
-
-# Ignore Visual Studio Code settings
 .vscode/
+.gitconfig
+.gitignore
+.bash_profile
+.bashrc
+.bash_history
+.cache/
+.config/
+.local/
+.npm/
+.nvm/
+.ssh/
+.zshrc
+.bash_logout
+.bash_profile
+.bashrc
+.cache
+.profile
+.vscode/
+.DS_Store
+
+# Ignore Windows system files
+AppData/
+Contacts/
+Cookies/
+Desktop/
+Documents/
+Downloads/
+Favorites/
+Links/
+Music/
+Pictures/
+Saved Games/
+Searches/
+Videos/
+OneDrive/
